--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>LOL Messenger PRO</title>
+  
+  <!-- Иконки для iOS / PWA - ТВОЙ ЛОГОТИП (по ссылке) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://iili.io/qdLcM6N.md.jpg">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://iili.io/qdLcM6N.md.jpg">
+  <link rel="apple-touch-icon" sizes="167x167" href="https://iili.io/qdLcM6N.md.jpg">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://iili.io/qdLcM6N.md.jpg">
 
   <style>
     :root{
